refactor(PasetoClaims): enhance claim management with null handling and logging for date parsing errors